# URL-Shortener-Analytics-Service

./: Dockerfile  Makefile  alembic.ini  pyproject.toml
app/: main.py
app/api/: auth.py  dependencies.py  short.py  shortener.py
app/config/: config.py
app/config/postgres/: config.py  database.py
app/exceptions/: api.py
app/migrations/: env.py
app/migrations/versions/: 2025_06_25_2237-cebde54d132a_initial_migration.py  2025_06_26_2016-c1afc920d0c8_fix_table_users.py  2025_06_26_2021-21bb27c7168f_fix_2_table_users.py  2025_06_26_2121-e7567d317bdd_fix_3_table_users.py  2025_06_28_0119-6ab4b3bbe564_fix_table_links.py  2025_06_28_1935-81c5f5c48407_fix2_table_links.py
app/models/: __init__.py  links.py  users.py
app/repositories/: base.py  links.py  users.py
app/schemas/: links.py  users.py
app/services/: auth.py  base.py  shortener.py
app/utils/: db_manager.py  redis_manager.py
docker_compose/: app.yml  redis.yml  storages.yml
